Fixing some issues with the postbox template not showing up. Adding a z-index to the modal so the post modal shows up correctly in Chrome

--- a/app/stylesheets/main_page/post_box.css.sass
+++ b/app/stylesheets/main_page/post_box.css.sass
@@ -244,10 +244,13 @@ a
   ul li a:hover
     color: $red
 
+#modal
+  z-index: 1000
+
 #post-box   
   background-color: $off-grey  
   border: 12px solid #bcbbae
-  z-index: 1000
+  z-index: 1001
   margin-top: 100px
   margin-right: auto
   margin-left: 250px
